k8s/base/k8s-executor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-executor
  namespace: mini-llm
  labels:
    app.kubernetes.io/name: mini-llm-executor
    app.kubernetes.io/instance: mock
    app.kubernetes.io/component: executor
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: mini-llm-executor
      app.kubernetes.io/instance: mock
      app.kubernetes.io/component: executor
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mini-llm-executor
        app.kubernetes.io/instance: mock
        app.kubernetes.io/component: executor
    spec:
      containers:
        - name: executor
          image: mini-llm-executor:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: executor
              containerPort: 19991
---
apiVersion: v1
kind: Service
metadata:
  name: mock-executor
  namespace: mini-llm
  labels:
    app.kubernetes.io/name: mini-llm-executor
    app.kubernetes.io/instance: mock
    app.kubernetes.io/component: executor
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mini-llm-executor
    app.kubernetes.io/instance: mock
    app.kubernetes.io/component: executor
  ports:
    - name: executor
      port: 19991
      targetPort: executor
